# corona-scanner

./: CMakeLists.txt  README.md
src/: lescan_covid19.cc
